--- a/site/layouts/partials/text-and-image.html
+++ b/site/layouts/partials/text-and-image.html
@@ -9,7 +9,7 @@
 			</div>
 
 			<div class="w-60-l ph2-l">
-				<img src="img/home-about-section.jpg" alt="" class="mb3">
+				<img src="img/eae2336757a2f6631cda0725d63d4f64.jpg" alt="" class="mb3">
 			</div>
 		</div>
 
