--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -24,7 +24,7 @@
 
 	<!-- Open Graph -->
 	<meta property="og:type" content="business.business">
-	<meta property="og:title" content="SM PROMINENT SDN. BHD.">
+	<meta property="og:title" content="Molly Care Molly Life">
 	<meta property="og:url" content="/">
 	<meta property="og:image" content="/img/og-image.jpg">
 
